Fix odd mobile spacing on placements

--- a/app/scss/layout/_base.scss
+++ b/app/scss/layout/_base.scss
@@ -10,3 +10,8 @@ body {
 	padding-left: $padding;
 	padding-right: $padding;
 }
+
+.row {
+	margin-left: -20px;
+	margin-right: -20px;
+}
